package model;

/**
 * L'enumerazione {@code Priorita} rappresenta i livelli di priorità
 * che una {@link Task} può avere.
 * 
 * <ul>
 *   <li>{@code BASSA} – Priorità bassa</li>
 *   <li>{@code MEDIA} – Priorità media</li>
 *   <li>{@code ALTA} – Priorità alta</li>
 * </ul>
 * 
 * @author Gian Luca Baccani
 * @version 1.0
 */
public enum Priorita {

    /** Priorità bassa. */
    BASSA,

    /** Priorità media. */
    MEDIA,

    /** Priorità alta. */
    ALTA
}